[project]
name = "kittenclaw"
version = "0.1.0"
description = "A minimal chat harness for teaching agentic loops."
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "openai>=1.40",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0",
    "jsonlines>=4.0",
    "pyyaml>=6.0",
    "telegramify-markdown>=1.1.5",
]

[project.scripts]
kittenclaw = "kittenclaw.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kittenclaw"]
